--- a/docker-compose-zipkin.yml
+++ b/docker-compose-zipkin.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: .
             dockerfile: ./docker/catalogue/Dockerfile
-        image: weaveworksdemos/catalogue
+        image: haroldmei/catalogue
         hostname: catalogue
         restart: always
         cap_drop:
@@ -21,7 +21,7 @@ services:
     catalogue-db:
         build:
             context: ./docker/catalogue-db/
-        image: weaveworksdemos/catalogue-db
+        image: haroldmei/catalogue-db
         hostname: catalogue-db
         restart: always
         environment:
