--- a/docker/catalogue/Dockerfile
+++ b/docker/catalogue/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.7
 
-COPY . /go/src/github.com/microservices-demo/catalogue
-WORKDIR /go/src/github.com/microservices-demo/catalogue
+COPY . /gopath/src/github.com/microservices-demo/catalogue
+WORKDIR /gopath/src/github.com/microservices-demo/catalogue
 
 RUN go get -u github.com/FiloSottile/gvt
 RUN gvt restore && \
