--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,15 @@ script:
   - ./test/test.sh unit.py
   - ./test/test.sh container.py --tag $TAG
 
-#after_success:
+after_success:
+  - set -e;
+  #- ./test/test.sh coveralls.py
+  - if [ -z "$DOCKER_PASS" ] ; then
+      echo "This is a build triggered by an external PR. Skipping docker push.";
+      exit 0;
+    fi;
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS;
+  - ./scripts/push.sh
 #  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
 
 notifications:
